Start tidying  dataset

--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,7 @@ $body-color: #d3d3d3;
 $link-color: orange;
 $code-color: #2a2a2a; 
 $code-bg: #f7faff;   
-$navbar-bg: #d3d3d3;
+$navbar-bg: rgba(211, 211, 211, 0.7);
 $navbar-fg: #181818;
 
 // Code 
